--- a/10-06-21/package.json
+++ b/10-06-21/package.json
@@ -7,6 +7,8 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "middleware": "^1.0.0",
     "mongoose": "^5.12.13"
   },
   "devDependencies": {},
